# GraphVisualizer

./: CMakeLists.txt  LICENSE  config.json
include/: Application.hpp  BFSAlgorithm.hpp  Config.hpp  DFSAlgorithm.hpp  GUI.hpp  Graph.hpp  GraphAlgorithm.hpp  GraphController.hpp  GraphLayout.hpp  GraphParser.hpp  GraphRenderer.hpp  Renderer.hpp  Shader.hpp  TextRenderer.hpp  Window.hpp
include/algorithms/: BFSAlgorithm.hpp  DFSAlgorithm.hpp  DijkstraAlgorithm.hpp  GraphAlgorithm.hpp
include/animations/: VisitEdge.hpp  VisitNode.hpp  VisualizationEvent.hpp
include/core/: AnimationController.hpp  Application.hpp  Graph.hpp  GraphController.hpp  Window.hpp
include/input/: AddEdgesMode.hpp  IMouseMode.hpp  MouseModeFactory.hpp  MoveNodesMode.hpp  SpawnNodesMode.hpp
include/layout/: GUI.hpp  GraphLayout.hpp
include/render/: GraphRenderer.hpp  Renderer.hpp  Shader.hpp  TextRenderer.hpp
include/utils/: Config.hpp  GraphParser.hpp
shaders/: fragmentShader.frag  vertexShader.vert
src/: Application.cpp  BFSAlgorithm.cpp  DFSAlgorithm.cpp  GUI.cpp  Graph.cpp  GraphLayout.cpp  GraphParser.cpp  GraphRenderer.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp  Window.cpp  main.cpp
src/algorithms/: BFSAlgorithm.cpp  DFSAlgorithm.cpp  DijkstraAlgorithm.cpp
src/animations/: VisualizationEvent.cpp
src/core/: Application.cpp  Graph.cpp  Window.cpp
src/input/: AddEdgesMode.cpp  MoveNodesMode.cpp  SpawnNodesMode.cpp
src/layout/: GUI.cpp  GraphLayout.cpp
src/render/: GraphRenderer.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp
src/utils/: GraphParser.cpp
